Add a basic test card grid

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,6 +141,25 @@
   .start-button {
     @apply bg-green-500 text-white border-none py-5 px-16 rounded-lg cursor-pointer min-w-[200px] whitespace-nowrap flex items-center justify-center;
   }
+
+  .card-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-content: stretch;
+    align-items: stretch;
+    align-self: stretch;
+    justify-content: stretch;
+    justify-items: stretch;
+    justify-self: stretch;
+    column-gap: 1.6vh;
+    row-gap: 1vh;
+    /* Change later */
+    width: 80vh;
+    height: 50vh;
+  }
+  .card {
+    background-color: #f2eadc;
+  }
 }
 
 body {
