--- a/app/globals.css
+++ b/app/globals.css
@@ -154,11 +154,27 @@
     column-gap: 1.6vh;
     row-gap: 1vh;
     /* Change later */
-    width: 80vh;
-    height: 50vh;
+    width: 120vh;
+    height: 75vh;
   }
   .card {
+    display: flex;
     background-color: #f2eadc;
+    justify-content: center;
+    align-items: center;
+    border-color: #d2c2a5;
+    border-radius: 1.5vh;
+    border-width: 1.25vh;
+  }
+
+  .card-button {
+    background-color: white;
+    width: 80%;
+    height: 40%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 2.5vh;
+    text-transform: uppercase;
   }
 }
 
