Final styling I believe. Add bunch of UI components

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,16 +155,7 @@ body {
   height: 100vh;
   background-image: url("/table.jpg");
   background-size: cover;
-}
-
-.time-box {
-
-}
-
-.role-box {
-
-}
-
-.status-box {
-
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
