--- a/components/game/CardGrid.module.css
+++ b/components/game/CardGrid.module.css
@@ -1,5 +1,4 @@
 .cardGrid {
-  margin: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   align-content: stretch;
@@ -10,7 +9,7 @@
   justify-self: stretch;
   column-gap: 1.6vh;
   row-gap: 1vh;
-  /* Change later */
   width: 120vh;
   height: 75vh;
+  margin: auto;
 }
