--- a/components/game/Card.module.css
+++ b/components/game/Card.module.css
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   background-color: #f2eadc;
+  color: black;
   justify-content: center;
   align-items: center;
   border-color: #d2c2a5;
