--- a/app/globals.css
+++ b/app/globals.css
@@ -240,7 +240,6 @@ body {
   align-items: center;
   justify-content: center; 
   text-align: center;
-
 }
 
 .game-code {
@@ -248,6 +247,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-bottom: 1rem; /* optional spacing */
+}
 
 .table {
   display: flex;
@@ -258,5 +258,4 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
 }
