--- a/app/globals.css
+++ b/app/globals.css
@@ -272,3 +272,20 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
+.background {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/background.png");
+  width: 100vw;
+  height: 100vh;
+}
+
+.wrapper {
+  background-color: white;
+  width: fit-content;
+  padding: 24px;
+  border-radius: 1.5vw;
+}
