--- a/components/game/RoleBox.module.css
+++ b/components/game/RoleBox.module.css
@@ -1,11 +1,18 @@
 .box {
     margin-top: 1vh;
-    background-color: rgb(0 0 0 / 75%);
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bolder;
     font-size: 3vw;
-    width: 35vw;
+    width: 60vw;
     border-radius: 1.5vh;
     text-align: center;
+}
+
+.blue {
+    background-color: rgb(0 0 255 / 75%);
+}
+
+.red {
+    background-color: rgb(255 0 0 / 75%);
 }
