--- a/components/game/Card.module.css
+++ b/components/game/Card.module.css
@@ -7,14 +7,49 @@
   border-color: #d2c2a5;
   border-radius: 1.5vh;
   border-width: 1.25vh;
+  position: relative;
 }
 
 .cardButton {
   background-color: white;
+  margin-top: 20%;
   width: 80%;
   height: 40%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   font-size: 2.5vh;
   text-transform: uppercase;
+}
+
+.textHint {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 2vh;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.75);
+  z-index: 1;
+  margin: 0;
+}
+
+.blue {
+  border-color: #0077cc;
+  box-shadow: 0 0 20px #0099ff;
+}
+
+.red {
+  border-color: #cc0000;
+  box-shadow: 0 0 20px #ff3333;
+}
+
+.assassin {
+  border-color: #333333;
+  box-shadow: 0 0 20px #000000;
+}
+
+.bystander {
+  border-color: #999999;
+  box-shadow: 0 0 20px #cccccc;
 }
