--- a/components/game/Card.module.css
+++ b/components/game/Card.module.css
@@ -8,9 +8,15 @@
   border-radius: 1.5vh;
   border-width: 1.25vh;
   position: relative;
+  cursor: pointer;
+}
+
+.card.covered {
+    cursor: default;
 }
 
 .cardButton {
+  display: flex;
   background-color: white;
   margin-top: 20%;
   width: 80%;
@@ -19,6 +25,8 @@
   font-weight: bold;
   font-size: 2.5vh;
   text-transform: uppercase;
+  align-items: center;
+  justify-content: center;
 }
 
 .textHint {
@@ -34,22 +42,54 @@
   margin: 0;
 }
 
-.blue {
+.card.blue {
   border-color: #0077cc;
   box-shadow: 0 0 20px #0099ff;
 }
 
-.red {
+.card.red {
   border-color: #cc0000;
   box-shadow: 0 0 20px #ff3333;
 }
 
-.assassin {
+.card.assassin {
   border-color: #333333;
   box-shadow: 0 0 20px #000000;
 }
 
-.bystander {
+.card.bystander {
   border-color: #999999;
   box-shadow: 0 0 20px #cccccc;
+}
+
+.blue.covered {
+  background-color: #0077cc;
+}
+
+.red.covered {
+  background-color: #cc0000;
+}
+
+.assassin.covered {
+  background-color: #333333;
+}
+
+.bystander.covered {
+  background-color: #999999;
+}
+
+.blue.covered.cardButton {
+  color: #0077cc;
+}
+
+.red.covered.cardButton {
+  color: #cc0000;
+}
+
+.assassin.covered.cardButton {
+  color: #333333;
+}
+
+.bystander.covered.cardButton {
+  color: #999999;
 }
