--- a/components/game/skipTurnButton.module.css
+++ b/components/game/skipTurnButton.module.css
@@ -1,3 +1,4 @@
+/* Box around button */
 .skipTurnButton {
   background-color: #000;
   color: white;
@@ -13,6 +14,7 @@
   margin-left: 10px;
 }
 
+/* Animations! */
 .skipTurnButton:hover {
   background-color: #555;
 }
