--- a/components/game/statusBox.module.css
+++ b/components/game/statusBox.module.css
@@ -1,3 +1,4 @@
+/* The box container */
 .box {
   display: flex;
   justify-content: space-around;
@@ -10,6 +11,7 @@
   border-radius: 1.5vh 1.5vh 0 0;
 }
 
+/* The wrapper around everything in the box */
 .wrapper {
   display: flex;
   align-items: center;
@@ -18,6 +20,7 @@
   align-content: center;
 }
 
+/* Handles input of clue */
 .inputContainer {
   display: flex;
   align-items: center;
@@ -27,11 +30,13 @@
   align-content: center;
 }
 
+/* Labels text boxxes */
 .label {
   margin-right: 0.5vw;
   white-space: nowrap;
 }
 
+/* Clue input */
 .textInput {
   @apply bg-background text-foreground;
   padding: 0.5vh 0.8vw;
@@ -42,6 +47,7 @@
   height: 4.5vh;
 }
 
+/* Guesses amount input */
 .numberInput {
   @apply bg-background text-foreground;
   padding: 0.5vh 0.8vw;
@@ -52,12 +58,14 @@
   height: 4.5vh;
 }
 
+/* Styling to show focus of input */
 .inputContainer input:focus {
   outline: none;
   border-color: #007bff;
   box-shadow: 0 0 0.3vh rgba(0, 123, 255, 0.5);
 }
 
+/* Submit clue button styling */
 .inputContainer button {
   @apply bg-background text-foreground;
   border: none;
@@ -71,6 +79,7 @@
   text-align: center;
 }
 
+/* Animations! */
 .inputContainer button:hover {
   background-color: #888;
 }
